style: 전체 프로젝트 코드 포맷팅 및 Checkstyle 규칙 적용
- .editorconfig에 파라미터 정렬 설정 추가 (ij_java_align_multiline_parameters)
- 전체 코드를 프로젝트 스타일로 리포맷팅 (4 spaces, 156자, Naver 컨벤션)
- Javadoc에서 @애노테이션을 {@code @애노테이션} 형식으로 수정하여 파싱 오류 해결
- QueryDslConfig에서 @PersistenceContext와 final 충돌 해결
- build.gradle.kts에 checkstyleMain Task 의존성 추가 (compileTestJava)
- Checkstyle 규칙을 프로젝트 스타일에 맞게 조정 (AtclauseOrder 완화)
- 모든 테스트 통과 및 Checkstyle 통과 확인